--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
-  <p>Click here to redirect to another page <a href="1.html" target="_blank"/></p>
+  <p>Click here to redirect to another page <a href="1.html" target="_blank">Click</a></p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
